// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`findEdgesInDependencies > should find an edge 1`] = `
Payload {
  "childs": [
    Payload {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "2",
      "inComponent": null,
      "languages": {},
      "name": "2",
      "parent": undefined,
      "path": Set {
        "/",
      },
      "reason": Set {},
      "tech": null,
      "techs": Set {},
    },
    Payload {
      "childs": [],
      "dependencies": [
        [
          "npm",
          "2",
          "0.0.0",
        ],
      ],
      "edges": [
        {
          "read": true,
          "target": Payload {
            "childs": [],
            "dependencies": [],
            "edges": [],
            "id": "2",
            "inComponent": null,
            "languages": {},
            "name": "2",
            "parent": undefined,
            "path": Set {
              "/",
            },
            "reason": Set {},
            "tech": null,
            "techs": Set {},
          },
          "write": true,
        },
      ],
      "id": "3",
      "inComponent": null,
      "languages": {},
      "name": "3",
      "parent": undefined,
      "path": Set {
        "/",
      },
      "reason": Set {},
      "tech": null,
      "techs": Set {},
    },
  ],
  "dependencies": [],
  "edges": [],
  "id": "1",
  "inComponent": null,
  "languages": {},
  "name": "main",
  "parent": undefined,
  "path": Set {
    "",
  },
  "reason": Set {},
  "tech": null,
  "techs": Set {},
}
`;

exports[`flatten > should flatten and merge dependencies 1`] = `
{
  "childs": [
    {
      "childs": [],
      "dependencies": [
        [
          "npm",
          "aa",
          "0.0.0",
        ],
      ],
      "edges": [],
      "id": "2",
      "inComponent": null,
      "languages": {},
      "name": "2",
      "path": [
        "/",
      ],
      "reason": [],
      "tech": null,
      "techs": [],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "npm",
          "bb",
          "0.0.0",
        ],
      ],
      "edges": [],
      "id": "3",
      "inComponent": null,
      "languages": {},
      "name": "3",
      "path": [
        "/",
      ],
      "reason": [],
      "tech": null,
      "techs": [],
    },
  ],
  "dependencies": [
    [
      "npm",
      "bb",
      "0.0.0",
    ],
    [
      "npm",
      "aa",
      "0.0.0",
    ],
  ],
  "edges": [],
  "id": "new",
  "inComponent": null,
  "languages": {},
  "name": "flatten",
  "path": [
    "/",
    "",
  ],
  "reason": [],
  "tech": null,
  "techs": [],
}
`;

exports[`flatten > should flatten and merge host 1`] = `
{
  "childs": [
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "2",
      "inComponent": "4",
      "languages": {},
      "name": "2",
      "path": [
        "/",
      ],
      "reason": [],
      "tech": null,
      "techs": [],
    },
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "4",
      "inComponent": null,
      "languages": {},
      "name": "4",
      "path": [
        "/",
      ],
      "reason": [],
      "tech": "vercel",
      "techs": [
        "vercel",
      ],
    },
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "6",
      "inComponent": "4",
      "languages": {},
      "name": "6",
      "path": [
        "/",
      ],
      "reason": [],
      "tech": null,
      "techs": [],
    },
  ],
  "dependencies": [],
  "edges": [],
  "id": "new",
  "inComponent": null,
  "languages": {},
  "name": "flatten",
  "path": [
    "/",
    "",
  ],
  "reason": [],
  "tech": null,
  "techs": [
    "vercel",
  ],
}
`;

exports[`flatten > should flatten but not merge 1`] = `
{
  "childs": [
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "2",
      "inComponent": "4",
      "languages": {},
      "name": "2",
      "path": [
        "/",
      ],
      "reason": [],
      "tech": null,
      "techs": [],
    },
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "4",
      "inComponent": null,
      "languages": {},
      "name": "4",
      "path": [
        "/",
      ],
      "reason": [],
      "tech": "vercel",
      "techs": [
        "vercel",
      ],
    },
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "6",
      "inComponent": "4",
      "languages": {},
      "name": "6",
      "path": [
        "/",
      ],
      "reason": [],
      "tech": null,
      "techs": [],
    },
  ],
  "dependencies": [],
  "edges": [],
  "id": "new",
  "inComponent": null,
  "languages": {},
  "name": "flatten",
  "path": [
    "/",
  ],
  "reason": [],
  "tech": null,
  "techs": [],
}
`;
